2006-06-29  Sven Panne  <sven.panne@aedion.de>

	* CMakeLists.txt, configure.ac, src/Makefile.am, src/al_mutexlib.c,
	src/al_mutexlib.h, src/al_threadlib.c, src/al_threadlib.h,
	src/config/al_config.c: Removed MorphOS support.

	* src/backends/alc_backend_morphos.c: Removed.

	* src/backends/alc_backend_null.c, src/backends/alc_backend_wave.c:
	Cleanup. Removed sleeping. Note that the WAVE backend still has
	portability issues and is not const-correct.

	* src/backends/alc_backend_alsa.c: Added some debug output.

	* src/backends/alc_backend_sdl.c: Signal that we do not handle getting
	and setting the volume in the SDL backend.

	* src/backends/alc_backend_oss.c: Use int constant when int is needed.

2006-06-29  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: remove linux/bsd oss backend, detect new oss backend
	
2006-06-28  Sven Panne  <sven.panne@aedion.de>

	* src/al_main.h: Removed unused offset_memcpy and memcpy_offset macros.

	* src/backends/alc_backend_alsa.c: Added some debug output.

	* src/backends/alc_backend_oss.c: Moved #include to the right place.

	* admin/autotools/.indent.pro: Added SDL types.

	* src/backends/alc_backend_sdl.c: Heavily cleaned up SDL backend.

	* configure.ac, src/backends/alc_backend.c, src/Makefile.am: Replaced
	BSD and Linux backends by the generic OSS backend. The fallback device
	is "alsa"/"oss"/"dmedia"/"null" now, whichever is the first one
	possible.

	* src/backends/alc_backend_bsd.c, src/backends/alc_backend_linux.c:
	Removed.

	* src/backends/alc_backend_oss.c: Implemented generic OSS backend.

	* src/alc/alc_device.c, src/backends/alc_backend_alsa.c: Improved debug
	output a bit.

2006-06-27  Sven Panne  <sven.panne@aedion.de>

	* src/backends/alc_backend_alsa.c: Renamed structure holding ALSA data
	to something more consistent. Removed some debugging output which
	belongs somewhere else. Close ALSA device when we run out of memory in
	the "open" operation. Cleaned up private data type and casts.
